--- a/source/posts/2013-02-10-podcast-01-01.md
+++ b/source/posts/2013-02-10-podcast-01-01.md
@@ -3,11 +3,11 @@ title: 01 выпуск 01 сезона
 date: 2013-02-10
 tags: 
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/2/download/podfm_rwpod_my_1.mp3"
-audio_mirror: "https://dl.dropbox.com/s/0w5hdx9qkhwqxa8/0101.mp3?dl=1"
+audio_url: "http://rwpod.podfm.ru/my/2/download/podfm_rwpod_my_1_2.mp3"
+audio_mirror: "https://www.dropbox.com/s/0w5hdx9qkhwqxa8/0101.mp3?dl=1"
 audio_format: "audio/mpeg"
-audio_length: 16899921
-duration: "00:17:29"
+audio_length: 17585338
+duration: "00:18:15"
 small_icon: mic
 ---
 
