--- a/source/posts/2013-02-10-podcast-01-01.md
+++ b/source/posts/2013-02-10-podcast-01-01.md
@@ -17,7 +17,7 @@ small_icon: mic
 
  - [Уязвимость в Rack::File и Rack::Session::Cookie](http://rack.github.com/)
  - [XSS уязвимость в RDoc](http://blog.segment7.net/2013/02/06/rdoc-xss-vulnerability-cve-2013-0256-releases-3-9-5-3-12-1-4-0-0-rc-2)
- - [Новый Ruby 1.9.3 c новый RDoc](http://www.ruby-lang.org/en/news/2013/02/06/ruby-1-9-3-p385-is-released/)
+ - [Ruby 1.9.3-p385 c новым RDoc](http://www.ruby-lang.org/en/news/2013/02/06/ruby-1-9-3-p385-is-released/)
  - [Ruby 2.0.0-rc2](http://www.ruby-lang.org/en/news/2013/02/08/ruby-2-0-0-rc2-is-released/)
  - [Как работает эксплоит с Yaml парсером в Ruby](http://rubysource.com/anatomy-of-an-exploit-an-in-depth-look-at-the-rails-yaml-vulnerability/)
  - [Новый exception_notification 3.0.1](https://github.com/smartinez87/exception_notification)
