--- a/source/posts/2013-02-24-podcast-01-03.md
+++ b/source/posts/2013-02-24-podcast-01-03.md
@@ -26,7 +26,7 @@ main_image: "/images/static/0103.png"
  - [Декомпиляция сессионных кук в Rails 3](http://alindeman.github.com/2013/02/18/decoding-rails-session-cookies.html)
  - [Geokdtree - k-d дерево для Ruby](https://github.com/colinsurprenant/geokdtree)
  - [Sorting gem](https://github.com/apeiros/sorting)
- - [ActiveRecord не безопастные методы](http://rails-sqli.org/)
+ - [ActiveRecord не безопасные методы](http://rails-sqli.org/)
 
 ## JavaScript 
 
