--- a/source/posts/2013-03-24-podcast-01-07.md
+++ b/source/posts/2013-03-24-podcast-01-07.md
@@ -21,6 +21,7 @@ main_image: "/images/static/0107.png"
  - Редизайн [Rubygems блога](http://blog.rubygems.org/2013/03/18/new-blog-design.html)
  - [Эксплоит в rubygems-openpgp-ca.org](https://www.rubygems-openpgp-ca.org/blog/ca-exploited-by-uber-hacker-havenwood.html)
  - [О поиске методов в Руби 2.0](http://tech.pro/tutorial/1149/understanding-method-lookup-in-ruby-20)
+ - [Lua скрипты в Redis](http://www.redisgreen.net/blog/2013/03/18/intro-to-lua-for-redis-programmers/)
  - [ElasticSearch c Ruby](http://blog.codegram.com/2013/3/elasticsearch-with-ruby)
  - [Почему Ruby?](http://www.codinghorror.com/blog/2013/03/why-ruby.html)
  - [rails\_4\_session\_flash\_backport для старых Rails](https://github.com/envato/rails_4_session_flash_backport)
