--- a/source/posts/2013-04-01-podcast-01-08.md
+++ b/source/posts/2013-04-01-podcast-01-08.md
@@ -3,7 +3,7 @@ title: 08 выпуск 01 сезона. Проблемы при обновлен
 date: 2013-04-01
 tags:
  - podcasts
-audio_url: "https://dl.dropbox.com/s/ppz4wxo2jrk6gwx/0108.mp3?dl=1"
+audio_url: "http://rwpod.podfm.ru/my/9/file/podfm_rwpod_my_8.mp3"
 audio_mirror: "https://dl.dropbox.com/s/ppz4wxo2jrk6gwx/0108.mp3?dl=1"
 audio_format: "audio/mpeg"
 audio_length: 23254019
