--- a/source/posts/2013-04-21-podcast-01-11.md
+++ b/source/posts/2013-04-21-podcast-01-11.md
@@ -30,7 +30,7 @@ main_image: "/images/static/0111.png"
  - Релиз [jQuery 2.0](http://blog.jquery.com/2013/04/18/jquery-2-0-released/)
  - [Скринкасты по Ember.js](http://ember101.com/videos/001-intro-and-binding-data-to-templates/)
  - [SlipCover - a data model web service layer on top CouchDB using Restify](https://github.com/plus3network/slipcover)
- - [A Comparison of Angular, Backbone, CanJS and Ember](http://sporto.github.io/blog/2013/04/12/comparison-angular-backbone-can-ember/)
+ - [A Comparison of Angular, Backbone, CanJS and Ember](http://sporto.github.io/blog/2013/04/12/comparison-angular-backbone-can-ember/). [TodoMVC - helping you select an MV* framework](http://todomvc.com/)
  - [Trip.js](http://eragonj.github.io/Trip.js/)
  - [Chardin.js](http://heelhook.github.io/chardin.js/)
 
