--- a/source/posts/2013-04-28-podcast-01-12.md
+++ b/source/posts/2013-04-28-podcast-01-12.md
@@ -1,5 +1,5 @@
 ---
-title: 12 выпуск 01 сезона. Не спамте своих юзеров, Rails Asset Precompilation to Kernel Debugging, Sprout, nginx 1.4.0, Underscore-Contrib и прочее
+title: 12 выпуск 01 сезона. Не спамьте своих юзеров, Rails Asset Precompilation to Kernel Debugging, Sprout, nginx 1.4.0, Underscore-Contrib и прочее
 date: 2013-04-28
 tags:
  - podcasts
