--- a/source/posts/2013-05-05-podcast-01-13.md
+++ b/source/posts/2013-05-05-podcast-01-13.md
@@ -1,5 +1,5 @@
 ---
-title: 13 выпуск 01 сезона. Релиз Rails 4.0\_RC1, проблемы с MySQL UTF-8 кодировкой, Stringer, Debian 7.0 и прочее
+title: 13 выпуск 01 сезона. Релиз Rails 4.0_RC1, проблемы с MySQL UTF-8 кодировкой, Stringer, Debian 7.0 и прочее
 date: 2013-05-05
 tags:
  - podcasts
