--- a/source/posts/2013-06-02-podcast-01-14.md
+++ b/source/posts/2013-06-02-podcast-01-14.md
@@ -33,7 +33,7 @@ main_image: "/images/static/0114.png"
  - Релиз [Node 0.10.9](http://blog.nodejs.org/2013/05/30/node-v0-10-9-stable/)
  - [Two.js - two-dimensional drawing api](http://jonobr1.github.io/two.js/)
  - [Polymer.js](http://www.polymer-project.org/)
- - [Helios.js - in-memory graph database](http://entrendipity.github.io/helios.js/)
+ - [Helios.js - in-memory graph database](http://entrendipity.github.io/helios.js/). [High Performance Data Visualizations by Vladimir Agafonkin](https://speakerdeck.com/mourner/high-performance-data-visualizations)
  - [Clippy.js - full Javascript implementation of Microsoft Agent](https://www.smore.com/clippy-js)
  - [Template Engine Chooser](http://garann.github.io/template-chooser/)
  - [Lazy.js - lazy evaluation in JS](http://dtao.github.io/lazy.js/)
