--- a/source/posts/2013-06-09-podcast-01-15.md
+++ b/source/posts/2013-06-09-podcast-01-15.md
@@ -1,5 +1,5 @@
 ---
-title: 15 выпуск 01 сезона. RVM для начинающих, микрофреймворк Cuda, Record Your Terminal, Converse.js, Seriously.js и прочее
+title: 15 выпуск 01 сезона. RVM для начинающих, микрофреймворк Cuba, Record Your Terminal, Converse.js, Seriously.js и прочее
 date: 2013-06-09
 tags:
  - podcasts
@@ -17,7 +17,7 @@ main_image: "/images/static/0115.png"
 ## Ruby
 
  - [RVM для начинающих](http://ruby.elevatedintel.com/blog/getting-started-with-rvm-features-to-use-and-pitfalls-to-avoid/)
- - [Микрофреймворк Cuda](http://www.frodsan.com/hello-cuba)
+ - [Микрофреймворк Cuba](http://www.frodsan.com/hello-cuba)
  - [Пишем Ruby wrapper для существующей C библиотеки](http://blog.firmhouse.com/wrapping-up-a-c-library-for-ruby-it-s-actually-pretty-easy)
  - [Трюки для extconf.rb](http://yorickpeterse.com/articles/hacking-extconf-rb/)
  - [PostgreSQL как NoSQL с валидацией данных](http://blog.endpoint.com/2013/06/postgresql-as-nosql-with-data-validation.html)
