--- a/source/posts/2013-06-23-podcast-01-17.md
+++ b/source/posts/2013-06-23-podcast-01-17.md
@@ -16,7 +16,7 @@ main_image: "/images/static/0117.png"
 
 ## Ruby
 
- - [Практика использования Rails enviroments в 37signals](http://37signals.com/svn/posts/3535-beyond-the-default-rails-environments)
+ - [Практика использования Rails environments в 37signals](http://37signals.com/svn/posts/3535-beyond-the-default-rails-environments)
  - [Protector - Ruby ORM extension for managing security restrictions on a field level](https://github.com/inossidabile/protector)
  - [Ruby implementation of Melkman's algorithm](http://gistflow.com/posts/834-ruby-implementation-of-melkman-s-algorithm-with-animation)
  - [How do I benchmark Ruby code?](http://rubylearning.com/blog/2013/06/19/how-do-i-benchmark-ruby-code/)
