--- a/source/posts/2013-07-22-podcast-01-20.md
+++ b/source/posts/2013-07-22-podcast-01-20.md
@@ -21,7 +21,7 @@ main_image: "/images/static/0120.png"
  - [Sharing Examples in Minitest](http://wojtekmach.pl/blog/2013/07/17/sharing-examples-in-minitest/)
  - [Webservice Object паттерн](http://blog.rlmflores.me/blog/2013/07/16/ruby-patterns-webservice-object/)
  - [Ваш OSS еще жив?](http://stillmaintained.com/)
- - [Цикличный кванй из 50 языков](https://github.com/mame/quine-relay)
+ - [Цикличный квайн из 50 языков](https://github.com/mame/quine-relay)
  - [Ускоряем деплой на Heroku](http://blog.alexmaccaw.com/faster-deploys)
  - [Понимаем Rails c помощью чтения Ruby исходников](http://pivotallabs.com/reading-the-ruby-source/)
 
