--- a/source/posts/2013-08-19-podcast-01-23.md
+++ b/source/posts/2013-08-19-podcast-01-23.md
@@ -1,5 +1,5 @@
 ---
-title: 23 выпуск 01 сезона. Пишем письма на Markdown, PSD.rb, 5 мифов о производительности мобильного веба и прочее
+title: 23 выпуск 01 сезона. Devise 3.1rc2, текучий Proc, видео с Backboneconf, mori.js и прочее
 date: 2013-08-19
 tags:
  - podcasts
