--- a/source/posts/2016/01-18-podcast-04-02.md
+++ b/source/posts/2016/01-18-podcast-04-02.md
@@ -1,5 +1,5 @@
 ---
-title: "02 выпуск 04 сезона.  и прочее"
+title: "02 выпуск 04 сезона. Future of Rails, Scenic, 10th Anniversary of jQuery, ChakraCore, React.run и прочее"
 date: 2016-01-18
 tags:
  - podcasts
@@ -16,13 +16,15 @@ main_image: "/images/static/04/0402.png"
 
 ## Ruby
 
- - [Announcing Scenic - Versioned Database Views for Rails](https://robots.thoughtbot.com/announcing-scenic--versioned-database-views-for-rails)
- - [Seamless second database integration for Rails](https://github.com/customink/secondbase)
- - [Passages Rails Engine](http://jakeyesbeck.com/2016/01/03/passages/)
+ - [David Heinemeier Hansson on the Future of Rails](http://thepracticaldev.com/dhh-on-the-future-of-rails) и [My experience with Minitest and RSpec](http://tenderlovemaking.com/2015/01/23/my-experience-with-minitest-and-rspec.html)
+ - [Announcing Scenic - Versioned Database Views for Rails](https://robots.thoughtbot.com/announcing-scenic--versioned-database-views-for-rails) и [Seamless second database integration for Rails](https://github.com/customink/secondbase)
+ - [Passages Rails Engine](http://jakeyesbeck.com/2016/01/03/passages/) и [Transforming Hashes — Which Way is Best?](https://medium.com/@vincedevendra/transforming-hashes-which-way-is-best-8f2122577984)
 
 ## JavaScript
 
- - [jQuery 2.2 and 1.12 Released](http://blog.jquery.com/2016/01/08/jquery-2-2-and-1-12-released/)
+ - [10th Anniversary of jQuery](http://ejohn.org/blog/10th-anniversary-of-jquery/), [jQuery 2.2 and 1.12 Released](http://blog.jquery.com/2016/01/08/jquery-2-2-and-1-12-released/), [jQuery 3.0 Beta](http://blog.jquery.com/2016/01/14/jquery-3-0-beta-released/), [Lodash v4.0.0](https://github.com/lodash/lodash/releases/tag/4.0.0/) и [ChakraCore is the core part of the Chakra Javascript engine that powers Microsoft Edge](https://github.com/Microsoft/ChakraCore)
+ - [Why I hate your Single Page App](https://medium.com/@stilkov/why-i-hate-your-single-page-app-f08bb4ff9134) и [Constant Variables in JavaScript, or: When "const" Isn't Constant](https://blog.mariusschulz.com/2015/12/31/constant-variables-in-javascript-or-when-const-isnt-constant)
+ - [Centralized State Design Patterns](http://lucasmreis.github.io/blog/centralized-state-design-patterns/) и [React.run - The fastest way to create React components, right in the browser](http://www.react.run/VJizwkL_x/1)
 
 
 READMORE
