--- a/source/posts/2016/02-01-podcast-04-04.md
+++ b/source/posts/2016/02-01-podcast-04-04.md
@@ -16,13 +16,20 @@ main_image: "/images/static/04/0404.png"
 
 ## Ruby
 
- - [Rails 5.0.0.beta1.1, 4.2.5.1, 4.1.14.1, 3.2.22.1, and rails-html-sanitizer 1.0.3 have been released!](http://weblog.rubyonrails.org/2016/1/25/Rails-5-0-0-beta1-1-4-2-5-1-4-1-14-1-3-2-22-1-and-rails-html-sanitizer-1-0-3-have-been-released/)
+ - [Rails 5.0.0.beta1.1, 4.2.5.1, 4.1.14.1, 3.2.22.1, and rails-html-sanitizer 1.0.3 have been released!](http://weblog.rubyonrails.org/2016/1/25/Rails-5-0-0-beta1-1-4-2-5-1-4-1-14-1-3-2-22-1-and-rails-html-sanitizer-1-0-3-have-been-released/), [Rails Dynamic Render to RCE (CVE-2016-0752)](https://nvisium.com/blog/2016/01/26/rails-dynamic-render-to-rce-cve-2016-0752/)
+ - [Stubbing External Services in Rails](https://semaphoreci.com/community/tutorials/stubbing-external-services-in-rails)
  - [Ruby Private Class Methods](http://jakeyesbeck.com/2016/01/24/ruby-private-class-methods/)
  - [Ruby Marshalling from A to Z](http://ilyabylich.svbtle.com/ruby-marshalling-from-a-to-z)
+ - [Replacing Pingdom with Ruby and Heroku](http://nandovieira.com/replacing-pingdom-with-ruby-and-heroku)
+ - [Increment_with_sql - provides increment_with_sql! and decrement_with_sql! for ActiveRecord models](https://github.com/mrkamel/increment_with_sql)
+ - [Chris Seaton on Massively Improving Ruby Performance with JRuby+Truffle](http://thepracticaldev.com/chris-seaton-making-ruby-fast)
 
 ## JavaScript
 
-
+ - [V8 Release 4.9](http://v8project.blogspot.com.au/2016/01/v8-release-49.html)
+ - [Awesome Marionette.js](https://github.com/sadcitizen/awesome-marionette)
+ - [Angular 2 is ugly!](https://medium.com/@morgler/angular-2-is-ugly-ce7066fe4d8b)
+ - [What we learnt from testing Searchkit’s React Components](https://blog.searchkit.co/what-we-have-learnt-from-searchkit-testing-7cb7c951db7c)
 
 
 READMORE
