--- a/source/posts/2016/02-01-podcast-04-04.md
+++ b/source/posts/2016/02-01-podcast-04-04.md
@@ -1,5 +1,5 @@
 ---
-title: "04 выпуск 04 сезона.  и прочее"
+title: "04 выпуск 04 сезона. Rails 5.0.0.beta1.1, V8 Release 4.9, Increment_with_sql, Babel Handbook, Voxel.css и прочее"
 date: 2016-02-01
 tags:
  - podcasts
@@ -16,20 +16,17 @@ main_image: "/images/static/04/0404.png"
 
 ## Ruby
 
- - [Rails 5.0.0.beta1.1, 4.2.5.1, 4.1.14.1, 3.2.22.1, and rails-html-sanitizer 1.0.3 have been released!](http://weblog.rubyonrails.org/2016/1/25/Rails-5-0-0-beta1-1-4-2-5-1-4-1-14-1-3-2-22-1-and-rails-html-sanitizer-1-0-3-have-been-released/), [Rails Dynamic Render to RCE (CVE-2016-0752)](https://nvisium.com/blog/2016/01/26/rails-dynamic-render-to-rce-cve-2016-0752/)
- - [Stubbing External Services in Rails](https://semaphoreci.com/community/tutorials/stubbing-external-services-in-rails)
- - [Ruby Private Class Methods](http://jakeyesbeck.com/2016/01/24/ruby-private-class-methods/)
- - [Ruby Marshalling from A to Z](http://ilyabylich.svbtle.com/ruby-marshalling-from-a-to-z)
- - [Replacing Pingdom with Ruby and Heroku](http://nandovieira.com/replacing-pingdom-with-ruby-and-heroku)
- - [Increment_with_sql - provides increment_with_sql! and decrement_with_sql! for ActiveRecord models](https://github.com/mrkamel/increment_with_sql)
- - [Chris Seaton on Massively Improving Ruby Performance with JRuby+Truffle](http://thepracticaldev.com/chris-seaton-making-ruby-fast)
+ - [Rails 5.0.0.beta1.1, 4.2.5.1, 4.1.14.1, 3.2.22.1, and rails-html-sanitizer 1.0.3 have been released!](http://weblog.rubyonrails.org/2016/1/25/Rails-5-0-0-beta1-1-4-2-5-1-4-1-14-1-3-2-22-1-and-rails-html-sanitizer-1-0-3-have-been-released/), [Rails Dynamic Render to RCE (CVE-2016-0752)](https://nvisium.com/blog/2016/01/26/rails-dynamic-render-to-rce-cve-2016-0752/) и [Caching in development environment in Rails 5](http://blog.bigbinary.com/2016/01/25/caching-in-development-environment-in-rails5.html)
+ - [Chris Seaton on Massively Improving Ruby Performance with JRuby+Truffle](http://thepracticaldev.com/chris-seaton-making-ruby-fast) и [Stubbing External Services in Rails](https://semaphoreci.com/community/tutorials/stubbing-external-services-in-rails)
+ - [Ruby Marshalling from A to Z](http://ilyabylich.svbtle.com/ruby-marshalling-from-a-to-z) и [Ruby Private Class Methods](http://jakeyesbeck.com/2016/01/24/ruby-private-class-methods/)
+ - [Replacing Pingdom with Ruby and Heroku](http://nandovieira.com/replacing-pingdom-with-ruby-and-heroku) и [Increment\_with\_sql - provides increment\_with\_sql! and decrement\_with\_sql! for ActiveRecord models](https://github.com/mrkamel/increment_with_sql)
 
 ## JavaScript
 
- - [V8 Release 4.9](http://v8project.blogspot.com.au/2016/01/v8-release-49.html)
- - [Awesome Marionette.js](https://github.com/sadcitizen/awesome-marionette)
- - [Angular 2 is ugly!](https://medium.com/@morgler/angular-2-is-ugly-ce7066fe4d8b)
- - [What we learnt from testing Searchkit’s React Components](https://blog.searchkit.co/what-we-have-learnt-from-searchkit-testing-7cb7c951db7c)
+ - [V8 Release 4.9](http://v8project.blogspot.com.au/2016/01/v8-release-49.html), [Understanding Garbage Collection and hunting Memory Leaks in Node.js](http://apmblog.dynatrace.com/2015/11/04/understanding-garbage-collection-and-hunting-memory-leaks-in-node-js/) и [Parse alternatives](https://github.com/relatedcode/ParseAlternatives)
+ - [The Controversial State of JavaScript Tooling](https://ponyfoo.com/articles/controversial-state-of-javascript-tooling) и [Angular 2 is ugly!](https://medium.com/@morgler/angular-2-is-ugly-ce7066fe4d8b)
+ - [Discontinuing IE 8 Support in React DOM](https://facebook.github.io/react/blog/2016/01/12/discontinuing-ie8-support.html), [What we learnt from testing Searchkit’s React Components](https://blog.searchkit.co/what-we-have-learnt-from-searchkit-testing-7cb7c951db7c) и [Babel Handbook](https://github.com/thejameskyle/babel-handbook)
+ - [Awesome Marionette.js](https://github.com/sadcitizen/awesome-marionette), [MediumEditor - a lightweight inline text editor inspired by the editor from the Medium blogging platform](https://yabwe.github.io/medium-editor/), [Hint.css - a pure CSS tooltip library for your lovely websites](http://kushagragour.in/lab/hint/) и [Voxel.css makes 3D rendering easy](http://www.voxelcss.com/)
 
 
 READMORE
