--- a/source/posts/2016/02-08-podcast-04-05.md
+++ b/source/posts/2016/02-08-podcast-04-05.md
@@ -17,6 +17,7 @@ main_image: "/images/static/04/0405.png"
 ## Ruby
 
  - [Rails 5.0.0.beta2: Slashed Action Cable dependencies, fixes galore](http://weblog.rubyonrails.org/2016/2/2/Rails-5-0-beta2/)
+ - [Scientist: Measure Twice, Cut Over Once](http://githubengineering.com/scientist/)
  - [I am a puts debuggerer](https://tenderlovemaking.com/2016/02/05/i-am-a-puts-debuggerer.html)
  - [Caching result sets and collection in Rails 5](http://blog.bigbinary.com/2016/02/02/activerecord-relation-cache-key.html)
  - [Ruby: Bindings Across Inheritance](http://6ftdan.com/allyourdev/2016/02/02/ruby-bindings-across-inheritance/)
