--- a/source/posts/2016/02-08-podcast-04-05.md
+++ b/source/posts/2016/02-08-podcast-04-05.md
@@ -29,6 +29,7 @@ main_image: "/images/static/04/0405.png"
 
  - [Angular 1.5.0 - ennoblement-facilitation has been released!](http://angularjs.blogspot.com/2016/02/angular-150-ennoblement-facilitation.html)
  - [Introducing ES2015 Proxies](https://developers.google.com/web/updates/2016/02/es2015-proxies)
+ - [Web Audio, the ugly click and the human ear](https://alemangui.github.io/blog//2015/12/26/ramp-to-value.html)
  - [GrapesJS - Free and Open source Web Template Editor](http://grapesjs.com/)
  - [jQuery.sheet - Easy & Wicked Fast spreadsheets for the web](http://spreadsheets.github.io/jQuery.sheet/)
  - [Isolated Core - a library for seamless in-page cold updates using iframes](http://chromakode.github.io/isolated-core/)
