--- a/source/posts/2016/02-08-podcast-04-05.md
+++ b/source/posts/2016/02-08-podcast-04-05.md
@@ -16,23 +16,15 @@ main_image: "/images/static/04/0405.png"
 
 ## Ruby
 
- - [Rails 5.0.0.beta2: Slashed Action Cable dependencies, fixes galore](http://weblog.rubyonrails.org/2016/2/2/Rails-5-0-beta2/)
- - [Scientist: Measure Twice, Cut Over Once](http://githubengineering.com/scientist/)
- - [I am a puts debuggerer](https://tenderlovemaking.com/2016/02/05/i-am-a-puts-debuggerer.html)
- - [Caching result sets and collection in Rails 5](http://blog.bigbinary.com/2016/02/02/activerecord-relation-cache-key.html)
- - [Ruby: Bindings Across Inheritance](http://6ftdan.com/allyourdev/2016/02/02/ruby-bindings-across-inheritance/)
- - [Abbrev from ruby standard lib](http://masa331.github.io/2016/02/01/ruby_abbrev_from_standard_lib.html)
- - [Recurring events in Ruby - introducing the Montrose gem](https://rossta.net/blog/recurring-events-in-ruby.html)
- - [ValueInspect - provides implementation of #inspect that is more readable](https://github.com/wojtekmach/value_inspect)
+ - [Rails 5.0.0.beta2: Slashed Action Cable dependencies, fixes galore](http://weblog.rubyonrails.org/2016/2/2/Rails-5-0-beta2/), [Scientist: Measure Twice, Cut Over Once](http://githubengineering.com/scientist/) и [Caching result sets and collection in Rails 5](http://blog.bigbinary.com/2016/02/02/activerecord-relation-cache-key.html)
+ - [Ruby: Bindings Across Inheritance](http://6ftdan.com/allyourdev/2016/02/02/ruby-bindings-across-inheritance/), [Abbrev from ruby standard lib](http://masa331.github.io/2016/02/01/ruby_abbrev_from_standard_lib.html) и [I am a puts debuggerer](https://tenderlovemaking.com/2016/02/05/i-am-a-puts-debuggerer.html)
+ - [Recurring events in Ruby - introducing the Montrose gem](https://rossta.net/blog/recurring-events-in-ruby.html) и [ValueInspect - provides implementation of #inspect that is more readable](https://github.com/wojtekmach/value_inspect)
 
 ## JavaScript
 
- - [Angular 1.5.0 - ennoblement-facilitation has been released!](http://angularjs.blogspot.com/2016/02/angular-150-ennoblement-facilitation.html)
- - [Introducing ES2015 Proxies](https://developers.google.com/web/updates/2016/02/es2015-proxies)
- - [Web Audio, the ugly click and the human ear](https://alemangui.github.io/blog//2015/12/26/ramp-to-value.html)
- - [GrapesJS - Free and Open source Web Template Editor](http://grapesjs.com/)
- - [jQuery.sheet - Easy & Wicked Fast spreadsheets for the web](http://spreadsheets.github.io/jQuery.sheet/)
- - [Isolated Core - a library for seamless in-page cold updates using iframes](http://chromakode.github.io/isolated-core/)
+ - [Angular 1.5.0 - ennoblement-facilitation has been released!](http://angularjs.blogspot.com/2016/02/angular-150-ennoblement-facilitation.html), [Introducing ES2015 Proxies](https://developers.google.com/web/updates/2016/02/es2015-proxies) и [Investigating the overhead cost of compiled es2015](https://github.com/samccone/The-cost-of-transpiling-es2015-in-2016)
+ - [Record audio and video with MediaRecorder](https://developers.google.com/web/updates/2016/01/mediarecorder) и [Web Audio, the ugly click and the human ear](https://alemangui.github.io/blog//2015/12/26/ramp-to-value.html)
+ - [Test your CSS Performance](http://www.testmycss.com/), [jQuery.sheet - Easy & Wicked Fast spreadsheets for the web](http://spreadsheets.github.io/jQuery.sheet/), [Isolated Core - a library for seamless in-page cold updates using iframes](http://chromakode.github.io/isolated-core/) и [GrapesJS - Free and Open source Web Template Editor](http://grapesjs.com/)
 
 
 READMORE
