--- a/source/posts/2016/02-08-podcast-04-05.md
+++ b/source/posts/2016/02-08-podcast-04-05.md
@@ -1,5 +1,5 @@
 ---
-title: "05 выпуск 04 сезона.  и прочее"
+title: "05 выпуск 04 сезона. Rails 5.0.0.beta2, Angular 1.5.0, Scientist, Abbrev, ES2015 Proxies, jQuery.sheet и прочее"
 date: 2016-02-08
 tags:
  - podcasts
