--- a/source/posts/2016/02-08-podcast-04-05.md
+++ b/source/posts/2016/02-08-podcast-04-05.md
@@ -18,7 +18,7 @@ main_image: "/images/static/04/0405.png"
 
  - [Rails 5.0.0.beta2: Slashed Action Cable dependencies, fixes galore](http://weblog.rubyonrails.org/2016/2/2/Rails-5-0-beta2/), [Scientist: Measure Twice, Cut Over Once](http://githubengineering.com/scientist/) и [Caching result sets and collection in Rails 5](http://blog.bigbinary.com/2016/02/02/activerecord-relation-cache-key.html)
  - [Ruby: Bindings Across Inheritance](http://6ftdan.com/allyourdev/2016/02/02/ruby-bindings-across-inheritance/), [Abbrev from ruby standard lib](http://masa331.github.io/2016/02/01/ruby_abbrev_from_standard_lib.html) и [I am a puts debuggerer](https://tenderlovemaking.com/2016/02/05/i-am-a-puts-debuggerer.html)
- - [Recurring events in Ruby - introducing the Montrose gem](https://rossta.net/blog/recurring-events-in-ruby.html) и [ValueInspect - provides implementation of #inspect that is more readable](https://github.com/wojtekmach/value_inspect)
+ - [Recurring events in Ruby - introducing the Montrose gem](https://rossta.net/blog/recurring-events-in-ruby.html), [ValueInspect - provides implementation of #inspect that is more readable](https://github.com/wojtekmach/value_inspect) и [Datetime-scopes - date/time scopes for ActiveRecord models](https://github.com/907th/datetime-scopes)
 
 ## JavaScript
 
