--- a/source/posts/2016/02-29-podcast-04-08.md
+++ b/source/posts/2016/02-29-podcast-04-08.md
@@ -16,12 +16,12 @@ main_image: "/images/static/04/0408.png"
 
 ## Ruby
 
-
+ - [Speeding up Sprockets](https://engineering.heroku.com/blogs/2016-02-18-speeding-up-sprockets/)
 
 ## JavaScript
 
+ - [jsPDF - HTML5 JavaScript PDF generation library](http://mrrio.github.io/jsPDF/)
  - [Draft.js - rich text editor framework for React](http://facebook.github.io/draft-js/)
-
 
 
 READMORE
