--- a/source/posts/2016/02-29-podcast-04-08.md
+++ b/source/posts/2016/02-29-podcast-04-08.md
@@ -16,12 +16,14 @@ main_image: "/images/static/04/0408.png"
 
 ## Ruby
 
- - [Speeding up Sprockets](https://engineering.heroku.com/blogs/2016-02-18-speeding-up-sprockets/)
+ - [Support plans for Ruby 2.0.0 and Ruby 2.1](https://www.ruby-lang.org/en/news/2016/02/24/support-plan-of-ruby-2-0-0-and-2-1/) и [Rails 5 allows configuring queue name for mailers](http://blog.bigbinary.com/2016/02/26/rails-5-allows-configuring-queue-name-for-mailers)
+ - [To gem, or not to gem](https://robots.thoughtbot.com/to-gem-or-not-to-gem) и [Using anonymous modules and prepend to work with generated code](https://blog.arkency.com/2016/02/using-anonymous-modules-and-prepend-to-work-with-generated-code/)
+ - [Speeding up Sprockets](https://engineering.heroku.com/blogs/2016-02-18-speeding-up-sprockets/) и [Table flipper (╯°□°）╯︵ ┻━┻ - a useless gem that prepends the table flipper on Exception messages](https://github.com/iridakos/table_flipper)
 
 ## JavaScript
 
- - [jsPDF - HTML5 JavaScript PDF generation library](http://mrrio.github.io/jsPDF/)
- - [Draft.js - rich text editor framework for React](http://facebook.github.io/draft-js/)
+ - [Draft.js - rich text editor framework for React](http://facebook.github.io/draft-js/) и [jsPDF - HTML5 JavaScript PDF generation library](http://mrrio.github.io/jsPDF/)
+ - [V86 is a x86 emulator build on node that can run in your browser](http://copy.sh/v86/), [Cash - a cross-platform implementation of Unix shell commands written in pure ES6](https://github.com/dthree/cash/) и [Scour.js - traverse objects and arrays immutably](http://ricostacruz.com/scour/)
 
 
 READMORE
