--- a/source/posts/2016/02-29-podcast-04-08.md
+++ b/source/posts/2016/02-29-podcast-04-08.md
@@ -1,5 +1,5 @@
 ---
-title: "08 выпуск 04 сезона.  и прочее"
+title: "08 выпуск 04 сезона. To gem, or not to gem, Mrusty, Table flipper, Preload: What Is It Good For?, Draft.js, FlippyJS, CSSCO и прочее"
 date: 2016-02-29
 tags:
  - podcasts
@@ -18,12 +18,13 @@ main_image: "/images/static/04/0408.png"
 
  - [Support plans for Ruby 2.0.0 and Ruby 2.1](https://www.ruby-lang.org/en/news/2016/02/24/support-plan-of-ruby-2-0-0-and-2-1/) и [Rails 5 allows configuring queue name for mailers](http://blog.bigbinary.com/2016/02/26/rails-5-allows-configuring-queue-name-for-mailers)
  - [To gem, or not to gem](https://robots.thoughtbot.com/to-gem-or-not-to-gem) и [Using anonymous modules and prepend to work with generated code](https://blog.arkency.com/2016/02/using-anonymous-modules-and-prepend-to-work-with-generated-code/)
- - [Speeding up Sprockets](https://engineering.heroku.com/blogs/2016-02-18-speeding-up-sprockets/) и [Table flipper (╯°□°）╯︵ ┻━┻ - a useless gem that prepends the table flipper on Exception messages](https://github.com/iridakos/table_flipper)
+ - [Speeding up Sprockets](https://engineering.heroku.com/blogs/2016-02-18-speeding-up-sprockets/), [Mrusty - mruby safe bindings for Rust](https://github.com/anima-engine/mrusty) и [Table flipper (╯°□°）╯︵ ┻━┻ - a useless gem that prepends the table flipper on Exception messages](https://github.com/iridakos/table_flipper)
 
 ## JavaScript
 
- - [Draft.js - rich text editor framework for React](http://facebook.github.io/draft-js/) и [jsPDF - HTML5 JavaScript PDF generation library](http://mrrio.github.io/jsPDF/)
- - [V86 is a x86 emulator build on node that can run in your browser](http://copy.sh/v86/), [Cash - a cross-platform implementation of Unix shell commands written in pure ES6](https://github.com/dthree/cash/) и [Scour.js - traverse objects and arrays immutably](http://ricostacruz.com/scour/)
+ - [Delivering Octicons with SVG](https://github.com/blog/2112-delivering-octicons-with-svg), [Squigglevision](https://css-tricks.com/squigglevision-in-css-and-svg/) и [Preload: What Is It Good For?](https://www.smashingmagazine.com/2016/02/preload-what-is-it-good-for/)
+ - [Draft.js - rich text editor framework for React](http://facebook.github.io/draft-js/), [FlippyJS - FLIP animation helper; animate DOM changes with ease](http://birjolaxew.github.io/flippy.js/), [jsPDF - HTML5 JavaScript PDF generation library](http://mrrio.github.io/jsPDF/) и [CSSCO - photographic filters made with css](http://www.cssco.co/)
+ - [V86 is a x86 emulator build on node that can run in your browser](http://copy.sh/v86/), [Cash - a cross-platform implementation of Unix shell commands written in pure ES6](https://github.com/dthree/cash/), [Scour.js - traverse objects and arrays immutably](http://ricostacruz.com/scour/) и [React.js Conf 2016 (videos)](https://www.youtube.com/playlist?list=PLb0IAmt7-GS0M8Q95RIc2lOM6nc77q1IY#reactjsconf2016)
 
 
 READMORE
