--- a/source/posts/2016/02-29-podcast-04-08.md
+++ b/source/posts/2016/02-29-podcast-04-08.md
@@ -17,8 +17,8 @@ main_image: "/images/static/04/0408.png"
 ## Ruby
 
  - [Support plans for Ruby 2.0.0 and Ruby 2.1](https://www.ruby-lang.org/en/news/2016/02/24/support-plan-of-ruby-2-0-0-and-2-1/) и [Rails 5 allows configuring queue name for mailers](http://blog.bigbinary.com/2016/02/26/rails-5-allows-configuring-queue-name-for-mailers)
- - [To gem, or not to gem](https://robots.thoughtbot.com/to-gem-or-not-to-gem) и [Using anonymous modules and prepend to work with generated code](https://blog.arkency.com/2016/02/using-anonymous-modules-and-prepend-to-work-with-generated-code/)
- - [Speeding up Sprockets](https://engineering.heroku.com/blogs/2016-02-18-speeding-up-sprockets/), [Mrusty - mruby safe bindings for Rust](https://github.com/anima-engine/mrusty) и [Table flipper (╯°□°）╯︵ ┻━┻ - a useless gem that prepends the table flipper on Exception messages](https://github.com/iridakos/table_flipper)
+ - [Speeding up Sprockets](https://engineering.heroku.com/blogs/2016-02-18-speeding-up-sprockets/), [To gem, or not to gem](https://robots.thoughtbot.com/to-gem-or-not-to-gem) и [Using anonymous modules and prepend to work with generated code](https://blog.arkency.com/2016/02/using-anonymous-modules-and-prepend-to-work-with-generated-code/)
+ - [Mrusty - mruby safe bindings for Rust](https://github.com/anima-engine/mrusty), [Ngx_mruby - is a fast and memory-efficient TCP Load Balancing and Web Server Extension Mechanism Using Scripting Language mruby for nginx](http://ngx.mruby.org/) и [Table flipper (╯°□°）╯︵ ┻━┻ - a useless gem that prepends the table flipper on Exception messages](https://github.com/iridakos/table_flipper)
 
 ## JavaScript
 
