--- a/source/posts/2016/03-07-podcast-04-09.md
+++ b/source/posts/2016/03-07-podcast-04-09.md
@@ -21,7 +21,9 @@ main_image: "/images/static/04/0409.png"
 ## JavaScript
 
 
+## Conferences
 
+ - [RubyMeditation #7](http://rubymeditation7.eventbrite.com)
 
 READMORE
 
