--- a/source/posts/2016/03-07-podcast-04-09.md
+++ b/source/posts/2016/03-07-podcast-04-09.md
@@ -17,9 +17,19 @@ main_image: "/images/static/04/0409.png"
 ## Ruby
 
  - [Rails 4.2.5.2, 4.1.14.2 and 3.2.22.2 have been released!](http://weblog.rubyonrails.org/2016/2/29/Rails-4-2-5-2-4-1-14-2-3-2-22-2-have-been-released/)
+ - [Migrations are versioned in Rails 5](http://blog.bigbinary.com/2016/03/01/migrations-are-versioned-in-rails-5.html)
+ - [Use file_fixture to access test files in Rails 5](http://blog.bigbinary.com/2016/03/02/use-file_fixture-to-access-test-files-rails-5.html)
+ - [Rails 5 improves redirect_to :back with new redirect_back method](http://blog.bigbinary.com/2016/02/29/rails-5-improves-redirect_to_back-with-redirect-back.html)
+ - [Thread Pool - A Ruby Antihero](https://rossta.net/blog/a-ruby-antihero-thread-pool.html)
+ - [HOWTO access Amazon DynamoDB with Ruby](http://readysteadycode.com/howto-access-amazon-dynamodb-with-ruby)
+ - [AcornCache is a Ruby HTTP proxy caching library](https://github.com/acorncache/acorn-cache)
+ - [On migrations, JSONB and databases in general](https://www.amberbit.com/blog/2016/2/28/on-migrations-jsonb-and-databases-in-general/)
+ - [Experimenting with explicit contracts with Ruby](http://blog.plataformatec.com.br/2016/02/experimenting-with-explicit-contracts-with-ruby/)
 
 ## JavaScript
 
+ - [Control Groups (cgroups) for the Web?](https://www.igvita.com/2016/03/01/control-groups-cgroups-for-the-web/)
+ - [Enzyme: JavaScript Testing utilities for React](https://medium.com/airbnb-engineering/enzyme-javascript-testing-utilities-for-react-a417e5e5090f)
 
 ## Conferences
 
