--- a/source/posts/2016/03-07-podcast-04-09.md
+++ b/source/posts/2016/03-07-podcast-04-09.md
@@ -30,6 +30,7 @@ main_image: "/images/static/04/0409.png"
 
  - [Control Groups (cgroups) for the Web?](https://www.igvita.com/2016/03/01/control-groups-cgroups-for-the-web/)
  - [Enzyme: JavaScript Testing utilities for React](https://medium.com/airbnb-engineering/enzyme-javascript-testing-utilities-for-react-a417e5e5090f)
+ - [Jquery Toast Plugin - a plugin to show highly customizable notifications to the user](http://kamranahmed.info/toast)
 
 ## Conferences
 
