--- a/source/posts/2016/03-21-podcast-04-11.md
+++ b/source/posts/2016/03-21-podcast-04-11.md
@@ -1,5 +1,5 @@
 ---
-title: "11 выпуск 04 сезона.  и прочее"
+title: "11 выпуск 04 сезона. Mastering Concurrency, LeSSL, Spreadsheet Architect, WebAssembly Milestone, Insight, Hashids и прочее"
 date: 2016-03-21
 tags:
  - podcasts
@@ -16,15 +16,15 @@ main_image: "/images/static/04/0411.png"
 
 ## Ruby
 
- - [How to Set Up Mutual TLS Authentication to Protect Your Admin Console](http://blog.codeship.com/how-to-set-up-mutual-tls-authentication/)
- - [Ruby Bits: Each with object](https://subvisual.co/blog/posts/74-ruby-bits-each-with-object)
- - [LeSSL - a simple gem to authorize for domains and obtaining certificates from the Let's Encrypt CA](https://github.com/tobiasfeistmantl/LeSSL)
+ - [Mastering Concurrency](http://blog.appsignal.com/blog/2016/03/17/ruby-magic-mastering-concurrency.html) и [10 Steps to Evaluate a Rails Project](http://www.ombulabs.com/blog/rails/maintenance/ten-steps-to-evaluate-a-rails-project.html)
+ - [How to Set Up Mutual TLS Authentication to Protect Your Admin Console](http://blog.codeship.com/how-to-set-up-mutual-tls-authentication/) и [Ruby Bits: Each with object](https://subvisual.co/blog/posts/74-ruby-bits-each-with-object)
+ - [Fast Search Using PostgreSQL Trigram Indexes](https://about.gitlab.com/2016/03/18/fast-search-using-postgresql-trigram-indexes/), [LeSSL - a simple gem to authorize for domains and obtaining certificates from the Let's Encrypt CA](https://github.com/tobiasfeistmantl/LeSSL) и [Spreadsheet Architect](https://github.com/westonganger/spreadsheet_architect)
 
 ## JavaScript
 
- - [A WebAssembly Milestone: Experimental Support in Multiple Browsers](https://hacks.mozilla.org/2016/03/a-webassembly-milestone/)
- - [Insight - a WebGL debugging toolkit](https://github.com/3Dparallax/insight/)
- - [Substance - a JavaScript library for web-based content editing](http://substance.io/)
+ - [A WebAssembly Milestone: Experimental Support in Multiple Browsers](https://hacks.mozilla.org/2016/03/a-webassembly-milestone/) и [The Deep Roots of Javascript Fatigue](https://segment.com/blog/the-deep-roots-of-js-fatigue/)
+ - [JavaScript is a Dysfunctional Programming Language](https://medium.com/javascript-non-grata/javascript-is-a-dysfunctional-programming-language-a1f4866e186f) и [Please stop referring to proposed JavaScript features as ES7](https://medium.com/@jayphelps/please-stop-referring-to-proposed-javascript-features-as-es7-cad29f9dcc4b)
+ - [Insight - a WebGL debugging toolkit](https://github.com/3Dparallax/insight/), [Hashids - a small open-source library that generates short, unique, non-sequential ids from numbers](http://hashids.org/), [D3 Calendar Heatmap](https://github.com/DKirwan/calendar-heatmap) и [Substance - a JavaScript library for web-based content editing](http://substance.io/)
 
 READMORE
 
