--- a/source/posts/2016/03-28-podcast-04-12.md
+++ b/source/posts/2016/03-28-podcast-04-12.md
@@ -22,6 +22,7 @@ main_image: "/images/static/04/0412.png"
 
 ## JavaScript
 
+ - [How one developer just broke Node, Babel and thousands of projects in 11 lines of JavaScript](http://www.theregister.co.uk/2016/03/23/npm_left_pad_chaos)
  - [Testing React Components with Enzyme and Mocha](https://semaphoreci.com/community/tutorials/testing-react-components-with-enzyme-and-mocha)
 
 READMORE
