--- a/source/posts/2016/03-28-podcast-04-12.md
+++ b/source/posts/2016/03-28-podcast-04-12.md
@@ -1,5 +1,5 @@
 ---
-title: "12 выпуск 04 сезона.  и прочее"
+title: "12 выпуск 04 сезона. How to upgrade to Rails 5, NotImplementedError, Left_pad, PassiveRecord, Hain и прочее"
 date: 2016-03-28
 tags:
  - podcasts
@@ -16,15 +16,15 @@ main_image: "/images/static/04/0412.png"
 
 ## Ruby
 
- - [How to upgrade to Rails 5](https://medium.com/@tair/how-to-upgrade-to-rails-5-657b3bfd83)
- - [Rebuilding Git in Ruby](https://robots.thoughtbot.com/rebuilding-git-in-ruby)
- - [Custom type-casting with ActiveRecord, Virtus and dry-types](http://blog.arkency.com/2016/03/custom-typecasting-with-activerecord-virtus-and-dry-types/)
+ - [How to upgrade to Rails 5](https://medium.com/@tair/how-to-upgrade-to-rails-5-657b3bfd83), [Improving your Microservices Integration Performance with Memcache and ETAGs](http://www.akitaonrails.com/2016/03/23/improving-your-microservices-integration-performance-with-memcache-and-etags) и [Rebuilding Git in Ruby](https://robots.thoughtbot.com/rebuilding-git-in-ruby)
+ - [Custom type-casting with ActiveRecord, Virtus and dry-types](http://blog.arkency.com/2016/03/custom-typecasting-with-activerecord-virtus-and-dry-types/), [Please Stop Abusing NotImplementedError](http://chrisstump.online/2016/03/23/stop-abusing-notimplementederror/) и [The hidden cost of indexes](https://aaronprice.ca/the-hidden-cost-of-indexes)
+ - [Left_pad - Ruby implementation of famous npm package](https://github.com/atipugin/left_pad), [PassiveRecord - an extremely lightweight in-memory pseudo-relational algebra](https://github.com/deepcerulean/passive_record) и [Timeless Programming Tools](http://www.flyingmachinestudios.com/programming/timeless-tools/)
 
 ## JavaScript
 
- - [How one developer just broke Node, Babel and thousands of projects in 11 lines of JavaScript](http://www.theregister.co.uk/2016/03/23/npm_left_pad_chaos)
- - [kik, left-pad, and npm](http://blog.npmjs.org/post/141577284765/kik-left-pad-and-npm)
- - [Testing React Components with Enzyme and Mocha](https://semaphoreci.com/community/tutorials/testing-react-components-with-enzyme-and-mocha)
+ - [It’s Official: JavaScript Is The Most Commonly Used Programming Language On Earth](http://arc.applause.com/2016/03/22/javascript-is-the-worlds-dominant-programming-language/), [How one developer just broke Node, Babel and thousands of projects in 11 lines of JavaScript](http://www.theregister.co.uk/2016/03/23/npm_left_pad_chaos), [kik, left-pad, and npm](http://blog.npmjs.org/post/141577284765/kik-left-pad-and-npm) и [Don’t Kill Your Abstractions, Understand Them](https://medium.com/@pranaymohan/don-t-kill-your-abstractions-understand-them-c1fe31e1c10a)
+ - [Apple is bad news for the future of the Web](https://medium.com/@richtr/apple-is-bad-news-for-the-future-of-the-web-6027b000b0c4), [Progressive Enhancement Makes Me Sad](http://www.heydonworks.com/article/progressive-enhancement-makes-me-sad) и [Testing React Components with Enzyme and Mocha](https://semaphoreci.com/community/tutorials/testing-react-components-with-enzyme-and-mocha)
+ - [Hain - an alternative to Alfred for Windows, built with Electron](https://github.com/appetizermonster/hain), [EventControl - jQuery timeline control with support for stacking events](http://www.kri.gs/eventcontrol/) и [StickyState adds state to position:sticky elements and also polyfills the missing native sticky feature](https://github.com/soenkekluth/sticky-state)
 
 READMORE
 
