--- a/source/posts/2016/03-30-podcast-04-12.md
+++ b/source/posts/2016/03-30-podcast-04-12.md
@@ -1,10 +1,10 @@
 ---
 title: "12 выпуск 04 сезона. How to upgrade to Rails 5, NotImplementedError, Left_pad, PassiveRecord, Hain и прочее"
-date: 2016-03-28
+date: 2016-03-30
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/147/file/podfm_rwpod_my_11_147.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.11/0411.mp3"
+audio_url: "http://rwpod.podfm.ru/my/148/file/podfm_rwpod_my_12_148.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.12/0412.mp3"
 audio_format: "audio/mpeg"
 audio_length: 41040224
 duration: "00:42:39"
@@ -22,7 +22,7 @@ main_image: "/images/static/04/0412.png"
 
 ## JavaScript
 
- - [It’s Official: JavaScript Is The Most Commonly Used Programming Language On Earth](http://arc.applause.com/2016/03/22/javascript-is-the-worlds-dominant-programming-language/), [How one developer just broke Node, Babel and thousands of projects in 11 lines of JavaScript](http://www.theregister.co.uk/2016/03/23/npm_left_pad_chaos), [kik, left-pad, and npm](http://blog.npmjs.org/post/141577284765/kik-left-pad-and-npm) и [Don’t Kill Your Abstractions, Understand Them](https://medium.com/@pranaymohan/don-t-kill-your-abstractions-understand-them-c1fe31e1c10a)
+ - [It’s Official: JavaScript Is The Most Commonly Used Programming Language On Earth](http://arc.applause.com/2016/03/22/javascript-is-the-worlds-dominant-programming-language/), [How one developer just broke Node, Babel and thousands of projects in 11 lines of JavaScript](http://www.theregister.co.uk/2016/03/23/npm_left_pad_chaos) и [kik, left-pad, and npm](http://blog.npmjs.org/post/141577284765/kik-left-pad-and-npm)
  - [Apple is bad news for the future of the Web](https://medium.com/@richtr/apple-is-bad-news-for-the-future-of-the-web-6027b000b0c4), [Progressive Enhancement Makes Me Sad](http://www.heydonworks.com/article/progressive-enhancement-makes-me-sad) и [Testing React Components with Enzyme and Mocha](https://semaphoreci.com/community/tutorials/testing-react-components-with-enzyme-and-mocha)
  - [Hain - an alternative to Alfred for Windows, built with Electron](https://github.com/appetizermonster/hain), [EventControl - jQuery timeline control with support for stacking events](http://www.kri.gs/eventcontrol/) и [StickyState adds state to position:sticky elements and also polyfills the missing native sticky feature](https://github.com/soenkekluth/sticky-state)
 
