--- a/source/posts/2016/04-04-podcast-04-13.md
+++ b/source/posts/2016/04-04-podcast-04-13.md
@@ -17,13 +17,18 @@ main_image: "/images/static/04/0413.png"
 ## Ruby
 
  - [Rails 5 changed Active Job default adapter from Inline to Async](http://blog.bigbinary.com/2016/03/29/rails-5-changed-default-active-job-adapter-to-async.html)
+ - [Introducing the Query Composer](http://weblog.jamisbuck.org/2016/3/26/introducing-query-composer.html)
  - [Processing large CSV files with Ruby](http://dalibornasevic.com/posts/68-processing-large-csv-files-with-ruby)
+ - [Write your first Rubygems plugin](http://eftimov.net/your-first-rubygems-plugin)
  - [Trailblazer gives you a high-level architecture for web applications](http://trailblazer.to/)
 
 ## JavaScript
 
+ - [NPM security vulnerability with leaking authentication headers](http://nodejs.org/en/blog/vulnerability/npm-tokens-leak-march-2016/)
+ - [Introducing Safari Technology Preview](https://webkit.org/blog/6017/introducing-safari-technology-preview/)
  - [Changes to npm's unpublish policy](http://blog.npmjs.org/post/141905368000/changes-to-npms-unpublish-policy)
  - [Thinscript - language that compiles to both WebAssembly and JavaScript](http://evanw.github.io/thinscript/)
+ - [Sketchpad - a simple sketchpad library](http://yiom.github.io/sketchpad/)
 
 
 READMORE
