--- a/source/posts/2016/04-04-podcast-04-13.md
+++ b/source/posts/2016/04-04-podcast-04-13.md
@@ -27,6 +27,7 @@ main_image: "/images/static/04/0413.png"
  - [NPM security vulnerability with leaking authentication headers](http://nodejs.org/en/blog/vulnerability/npm-tokens-leak-march-2016/)
  - [Introducing Safari Technology Preview](https://webkit.org/blog/6017/introducing-safari-technology-preview/)
  - [Changes to npm's unpublish policy](http://blog.npmjs.org/post/141905368000/changes-to-npms-unpublish-policy)
+ - [Throwing errors with FB's invariant library](https://www.kriasoft.com/babel-starter-kit/recipes/throwing-errors-with-fbjs-invariant)
  - [Thinscript - language that compiles to both WebAssembly and JavaScript](http://evanw.github.io/thinscript/)
  - [Sketchpad - a simple sketchpad library](http://yiom.github.io/sketchpad/)
 
