--- a/source/posts/2016/04-11-podcast-04-14.md
+++ b/source/posts/2016/04-11-podcast-04-14.md
@@ -16,13 +16,18 @@ main_image: "/images/static/04/0414.png"
 
 ## Ruby
 
+ - [RubyGems.org gem replacement vulnerability and mitigation](http://blog.rubygems.org/2016/04/06/gem-replacement-vulnerability-and-mitigation.html)
+ - [Simple Multitenancy with Rails and Pundit](http://andrewmarkle.com/2016/04/06/multitenancy-with-pundit.html)
  - [Netguru Presents: Picguard - Visual Content Processing In Rails](https://www.netguru.co/blog/image-processing-for-rails)
+ - [Two Dumb Ruby Mistakes](http://patshaughnessy.net/2016/4/2/two-dumb-ruby-mistakes)
  - [A Tale of Security Gone Wrong](http://gavinmiller.io/2016/a-tale-of-security-gone-wrong/)
  - [Implementing Ruby 2.3.0: Enumerable's chunk_while](http://til.seansellek.com/chunk_while/)
  - [How to Deal with Timezones the Active Support Way](http://jakeyesbeck.com/2016/04/03/how-to-deal-with-timezones-the-active-support-way/)
 
 ## JavaScript
 
+ - [React v15.0](https://facebook.github.io/react/blog/2016/04/07/react-v15.html)
+ - [Our Justified Layout Goes Open Source](http://code.flickr.net/2016/04/05/our-justified-layout-goes-open-source/)
  - [Offline installation of npm packages](https://addyosmani.com/blog/using-npm-offline/)
  - [Popper.js - a library used to create poppers in web applications.](https://fezvrasta.github.io/popper.js/)
  - [Cwait - Limit number of promises running in parallel](https://github.com/charto/cwait)
