--- a/source/posts/2016/04-11-podcast-04-14.md
+++ b/source/posts/2016/04-11-podcast-04-14.md
@@ -1,5 +1,5 @@
 ---
-title: "14 выпуск 04 сезона. и прочее"
+title: "14 выпуск 04 сезона. RubyGems.org vulnerability, React v15.0.1, Grunt 1.0.0, Picguard, Glio.js, SassMe и прочее"
 date: 2016-04-11
 tags:
  - podcasts
@@ -16,21 +16,19 @@ main_image: "/images/static/04/0414.png"
 
 ## Ruby
 
- - [RubyGems.org gem replacement vulnerability and mitigation](http://blog.rubygems.org/2016/04/06/gem-replacement-vulnerability-and-mitigation.html)
- - [Simple Multitenancy with Rails and Pundit](http://andrewmarkle.com/2016/04/06/multitenancy-with-pundit.html)
- - [Netguru Presents: Picguard - Visual Content Processing In Rails](https://www.netguru.co/blog/image-processing-for-rails)
- - [Two Dumb Ruby Mistakes](http://patshaughnessy.net/2016/4/2/two-dumb-ruby-mistakes)
- - [A Tale of Security Gone Wrong](http://gavinmiller.io/2016/a-tale-of-security-gone-wrong/)
- - [Implementing Ruby 2.3.0: Enumerable's chunk_while](http://til.seansellek.com/chunk_while/)
- - [How to Deal with Timezones the Active Support Way](http://jakeyesbeck.com/2016/04/03/how-to-deal-with-timezones-the-active-support-way/)
+ - [RubyGems.org gem replacement vulnerability and mitigation](http://blog.rubygems.org/2016/04/06/gem-replacement-vulnerability-and-mitigation.html) и [Implementing Ruby 2.3.0: Enumerable's chunk_while](http://til.seansellek.com/chunk_while/) и
+ - [How to Deal with Timezones the Active Support Way](http://jakeyesbeck.com/2016/04/03/how-to-deal-with-timezones-the-active-support-way/) и [Simple Multitenancy with Rails and Pundit](http://andrewmarkle.com/2016/04/06/multitenancy-with-pundit.html)
+ - [A Tale of Security Gone Wrong](http://gavinmiller.io/2016/a-tale-of-security-gone-wrong/), [Two Dumb Ruby Mistakes](http://patshaughnessy.net/2016/4/2/two-dumb-ruby-mistakes) и [Netguru Presents: Picguard - Visual Content Processing In Rails](https://www.netguru.co/blog/image-processing-for-rails)
 
 ## JavaScript
 
- - [React v15.0](https://facebook.github.io/react/blog/2016/04/07/react-v15.html)
- - [Our Justified Layout Goes Open Source](http://code.flickr.net/2016/04/05/our-justified-layout-goes-open-source/)
- - [Offline installation of npm packages](https://addyosmani.com/blog/using-npm-offline/)
- - [Popper.js - a library used to create poppers in web applications.](https://fezvrasta.github.io/popper.js/)
- - [Cwait - Limit number of promises running in parallel](https://github.com/charto/cwait)
+ - [React v15.0.1](https://facebook.github.io/react/blog/2016/04/08/react-v15.0.1.html), [Grunt 1.0.0](http://gruntjs.com/blog/2016-04-04-grunt-1.0.0-released) и [Chrome 51 adds Intersection Observer: Get visibility of DOM elements relative to a viewport without polling](https://github.com/WICG/IntersectionObserver/blob/master/explainer.md)
+ - [Webpack — The Confusing Parts](https://medium.com/@rajaraodv/webpack-the-confusing-parts-58712f8fcad9), [JavaScript Module Systems Showdown: CommonJS vs AMD vs ES2015](https://auth0.com/blog/2016/03/15/javascript-module-systems-showdown/), [4 Types of Memory Leaks in JavaScript and How to Get Rid Of Them](https://auth0.com/blog/2016/01/26/four-types-of-leaks-in-your-javascript-code-and-how-to-get-rid-of-them/) и [Offline installation of npm packages](https://addyosmani.com/blog/using-npm-offline/)
+ - [Our Justified Layout Goes Open Source](http://code.flickr.net/2016/04/05/our-justified-layout-goes-open-source/), [Popper.js - a library used to create poppers in web applications](https://fezvrasta.github.io/popper.js/), [Glio.js - detects if the mouse of an user leaves the viewport/document borders of your website](http://luisvinicius167.github.io/gliojs/), [Cwait - limit number of promises running in parallel](https://github.com/charto/cwait) и [SassMe - visualize SASS color functions](http://sassme.arc90.com/)
+
+## Скринкасты
+
+ - [RWpod скринкасты](https://www.youtube.com/user/rwpod)
 
 
 READMORE
