--- a/source/posts/2016/04-11-podcast-04-14.md
+++ b/source/posts/2016/04-11-podcast-04-14.md
@@ -28,7 +28,7 @@ main_image: "/images/static/04/0414.png"
 
 ## Скринкасты
 
- - [RWpod скринкасты](https://www.youtube.com/user/rwpod)
+ - [RWpod скринкасты](https://www.youtube.com/channel/UC_CA1uZFuVdBfLSHf2qEwyg)
 
 
 READMORE
