--- a/source/posts/2016/04-18-podcast-04-15.md
+++ b/source/posts/2016/04-18-podcast-04-15.md
@@ -1,5 +1,5 @@
 ---
-title: "15 выпуск 04 сезона.  и прочее"
+title: "15 выпуск 04 сезона. Why You Should Taste Grape, Ruby Methods, Rodauth, Why Javascript Development is Crazy и прочее"
 date: 2016-04-18
 tags:
  - podcasts
@@ -16,14 +16,15 @@ main_image: "/images/static/04/0415.png"
 
 ## Ruby
 
- - [Whitelisting with the lesser - known #presence_in method](https://infinum.co/the-capsized-eight/articles/whitelisting-with-the-lesser-known-presence-in-method)
- - [Ruby Methods: differences between load, require, include and extend in Ruby](https://prograils.com/posts/ruby-methods-differences-load-require-include-extend)
- - [Awesome Ruby](http://ruby.libhunt.com/)
+ - [Rails 5 adds warning when fetching big result set with Active Record](http://blog.bigbinary.com/2016/04/13/rails-5-adds-option-to-log-warning-when-fetching-big-result-sets.html), [Rails 5 allows to send log to STDOUT via environment variable](http://blog.bigbinary.com/2016/04/12/rails-5-allows-to-send-log-to-stdout-via-environment-variable.html) и [Why You Should Taste Grape](http://glaucocustodio.com/2016/04/14/why-you-should-taste-grape/)
+ - [Ruby Methods: differences between load, require, include and extend in Ruby](https://prograils.com/posts/ruby-methods-differences-load-require-include-extend), [Metaprogramming in The Wild](http://www.blackbytes.info/2016/04/metaprogramming-in-the-wild/) и [The Optimist's Guide to Pessimistic Library Versioning](https://blog.codeship.com/optimists-guide-pessimistic-library-versioning/)
+ - [Whitelisting with the lesser - known #presence_in method](https://infinum.co/the-capsized-eight/articles/whitelisting-with-the-lesser-known-presence-in-method), [Introducing the activerecord-collection_cache_key gem](http://technology.customink.com/blog/2016/04/07/introducing-the-activerecord-collection-cache-key-gem/), [Rodauth - an authentication and account management framework for Rack applications](http://rodauth.jeremyevans.net/) и [Awesome Ruby](http://ruby.libhunt.com/)
 
 ## JavaScript
 
- - [Why Javascript Development is Crazy](http://www.planningforaliens.com/blog/2016/04/11/why-js-development-is-crazy/)
- - [Why we should stop using GIFs](http://www.sohamkamani.com/blog/2016/04/09/stop-using-gifs/)
+ - [Why Javascript Development is Crazy](http://www.planningforaliens.com/blog/2016/04/11/why-js-development-is-crazy/) и [The other kind of JavaScript fatigue](http://chrismm.com/blog/the-other-kind-of-javascript-fatigue/)
+ - [Why we should stop using GIFs](http://www.sohamkamani.com/blog/2016/04/09/stop-using-gifs/) и [Web Font Loading Patterns](https://www.bramstein.com/writing/web-font-loading-patterns.html)
+ - [Awesome JavaScript](http://js.libhunt.com/), [Interactive 3D Mall Map](http://tympanus.net/codrops/2016/04/13/interactive-3d-mall-map/) и [Object.toSting() polyfill](https://github.com/teropa/to-sting)
 
 
 READMORE
