--- a/source/posts/2016/04-25-podcast-04-16.md
+++ b/source/posts/2016/04-25-podcast-04-16.md
@@ -17,17 +17,25 @@ main_image: "/images/static/04/0416.png"
 ## Ruby
 
  - [Changes to test controllers in Rails 5](http://blog.bigbinary.com/2016/04/19/changes-to-test-controllers-in-rails-5.html)
+ - [Rails 5 officially supports MariaDB](http://blog.bigbinary.com/2016/04/21/rails-5-official-supports-mariadb.html)
+ - [The Road to Sinatra 2.0](http://zzak.io/log/2016-04-18-the-road-to-sinatra-2.0.html)
  - [How I hunted the most odd ruby bug](http://blog.arkency.com/2016/04/how-i-hunted-the-most-odd-ruby-bug/)
  - [When to avoid the DRY principle](https://www.madetech.com/blog/when-to-avoid-the-dry-principle)
  - [6 Reasons to Choose Ruby on Rails (RoR) to Build Web Application](http://www.railscarma.com/blog/technical-articles/6-reasons-choose-ruby-rails-ror-build-web-application/)
  - [Using Webpack with Middleman](https://rossta.net/blog/using-webpack-with-middleman.html)
+ - [How to Find Ruby Code Smells with Reek](https://blog.codeship.com/how-to-find-ruby-code-smells-with-reek/)
+ - [Thredded is a Rails 4.2+ forum/messageboard engine](https://thredded.org/)
 
 ## JavaScript
 
+ - [V8 Release 5.1](http://v8project.blogspot.it/2016/04/v8-release-51.html)
+ - [A Gentle Introduction to Javascript Test Driven Development](http://jrsinclair.com/articles/2016/gentle-introduction-to-javascript-tdd-intro/)
+ - [Jarvis: an Amazon Echo clone in your browser with PageNodes](https://iceddev.com/blog/jarvis-an-amazon-echo-clone-in-your-browser/)
  - [LazyDOM — an experiment to bring virtual DOM to the browser natively](https://medium.com/@jayphelps/lazydom-an-experiment-to-bring-virtual-dom-to-the-browser-natively-6a2f47096aca)
  - [Scrollbear is a tool that maintains the container scroll position when images loaded](http://changbenny.github.io/scrollbear/)
  - [EmberConf 2016 (videos)](http://confreaks.tv/events/emberconf2016)
  - [Awesome ESLint](https://github.com/dustinspecker/awesome-eslint)
+ - [TypeScript Deep Dive (book)](https://www.gitbook.com/book/basarat/typescript/details)
 
 
 READMORE
