--- a/source/posts/2016/04-25-podcast-04-16.md
+++ b/source/posts/2016/04-25-podcast-04-16.md
@@ -23,7 +23,7 @@ main_image: "/images/static/04/0416.png"
 ## JavaScript
 
  - [V8 Release 5.1](http://v8project.blogspot.it/2016/04/v8-release-51.html), [Finally, CSS In JavaScript! Meet CSSX](https://www.smashingmagazine.com/2016/04/finally-css-javascript-meet-cssx/) и [Jarvis: an Amazon Echo clone in your browser with PageNodes](https://iceddev.com/blog/jarvis-an-amazon-echo-clone-in-your-browser/)
- - [LazyDOM — an experiment to bring virtual DOM to the browser natively](https://medium.com/@jayphelps/lazydom-an-experiment-to-bring-virtual-dom-to-the-browser-natively-6a2f47096aca), [Tabular Input - one-line text fields in a tabular format](http://ncrafts.github.io/tabular-input/), [Kewler is a simple functional and immutable color manipulation library](https://github.com/adriantoine/kewler) и [Scrollbear is a tool that maintains the container scroll position when images loaded](http://changbenny.github.io/scrollbear/)
+ - [LazyDOM — an experiment to bring virtual DOM to the browser natively](https://medium.com/@jayphelps/lazydom-an-experiment-to-bring-virtual-dom-to-the-browser-natively-6a2f47096aca), [Tabular Input - one-line text fields in a tabular format](http://ncrafts.github.io/tabular-input/), [Kewler is a simple functional and immutable color manipulation library](https://github.com/adriantoine/kewler), [Chart.js 2.0](http://www.chartjs.org/) и [Scrollbear is a tool that maintains the container scroll position when images loaded](http://changbenny.github.io/scrollbear/)
  - [Awesome ESLint](https://github.com/dustinspecker/awesome-eslint), [TypeScript Deep Dive (book)](https://www.gitbook.com/book/basarat/typescript/details), [MaintainableCSS (book)](http://maintainablecss.com/) и [EmberConf 2016 (videos)](http://confreaks.tv/events/emberconf2016)
 
 
